[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Fonts/RussoOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Progress_upper.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Progress.png" type="Texture" id=5]
[ext_resource path="res://Assets/Menu Icons/cross.png" type="Texture" id=6]
[ext_resource path="res://Assets/Menu Icons/trophy.png" type="Texture" id=7]
[ext_resource path="res://Assets/Menu Icons/star.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 80
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/CatchPhrase:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Show Phrase"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/CatchPhrase:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.8, 1.9, 2.2, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0, 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/CatchPhrase:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "Circles
are
good!", "Circles
are
good!", "Polygons
are
bad!" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/CatchPhrase:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5, 1.8, 2.1, 2.2, 3.7, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "ShowLevel"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("LevelLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=6]
size = 72
use_filter = true
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 70.0
margin_bottom = 90.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 60.0
margin_bottom = 82.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 60.0
margin_bottom = 39.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 35.0
margin_bottom = 39.0
rect_min_size = Vector2( 35, 35 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 39.0
margin_right = 60.0
margin_bottom = 39.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 43.0
margin_right = 60.0
margin_bottom = 82.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 35.0
margin_bottom = 39.0
rect_min_size = Vector2( 35, 35 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="ComboLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 39.0
margin_right = 60.0
margin_bottom = 39.0
rect_min_size = Vector2( 0, 34 )
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 1 )
text = "0"
valign = 1

[node name="ProgressBars" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -147.0
margin_top = 15.0
margin_right = -8.0
margin_bottom = 84.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="ProgressBars"]
margin_right = 139.0
margin_bottom = 69.0

[node name="HBoxContainer" type="HBoxContainer" parent="ProgressBars/VBoxContainer2"]
margin_right = 139.0
margin_bottom = 35.0

[node name="Fails" type="TextureRect" parent="ProgressBars/VBoxContainer2/HBoxContainer"]
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 35, 35 )
size_flags_horizontal = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="FailProgress" type="TextureProgress" parent="ProgressBars/VBoxContainer2/HBoxContainer"]
margin_left = 39.0
margin_right = 139.0
margin_bottom = 35.0
max_value = 20.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="LevelLabel" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -164.0
margin_top = -49.0
margin_right = 164.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 2 )
text = "Level 10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
"anims/Show Phrase" = SubResource( 8 )
anims/ShowLevel = SubResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -181.5
margin_top = -158.5
margin_right = 181.5
margin_bottom = 158.5
mouse_filter = 2
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CatchPhrase" type="Label" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 23.0
margin_right = 363.0
margin_bottom = 293.0
custom_fonts/font = SubResource( 6 )
text = "Circles
are
good!"
align = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
